--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
     "main": "index.js",
     "scripts": {
         "tsc": "tsc",
-        "dev": "ts-node-dev src/index.ts",
+        "dev": "ts-node-dev index.ts",
         "lint": "eslint .",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
@@ -15,6 +15,8 @@
         "cors": "^2.8.5",
         "dotenv": "^16.4.5",
         "express": "^4.21.0",
+        "sequelize": "^6.37.4",
+        "umzug": "^3.8.2",
         "uuid": "^10.0.0"
     },
     "devDependencies": {
@@ -26,6 +28,7 @@
         "@types/uuid": "^10.0.0",
         "eslint": "^9.11.1",
         "nodemon": "^3.1.7",
+        "sequelize-typescript": "^2.1.6",
         "ts-node": "^10.9.2",
         "ts-node-dev": "^2.0.0",
         "typescript": "^5.6.2",
