--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
         "dotenv": "^16.4.5",
         "express": "^4.21.0",
         "sequelize": "^6.37.4",
+        "socket.io": "^4.8.0",
         "umzug": "^3.8.2",
         "uuid": "^10.0.0"
     },
