--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
     "main": "index.js",
     "scripts": {
         "tsc": "tsc",
-        "dev": "ts-node-dev index.ts",
+        "dev": "ts-node-dev --poll index.ts",
         "lint": "eslint .",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
@@ -12,9 +12,12 @@
     "license": "ISC",
     "description": "",
     "dependencies": {
+        "bcrypt": "^5.1.1",
         "cors": "^2.8.5",
         "dotenv": "^16.4.5",
         "express": "^4.21.0",
+        "express-async-errors": "^3.1.1",
+        "jsonwebtoken": "^9.0.2",
         "pg": "^8.13.0",
         "sequelize": "^6.37.4",
         "socket.io": "^4.8.0",
@@ -24,9 +27,11 @@
     "devDependencies": {
         "@eslint/js": "^9.11.1",
         "@stylistic/eslint-plugin": "^2.8.0",
+        "@types/bcrypt": "^5.0.2",
         "@types/cors": "^2.8.17",
         "@types/eslint__js": "^8.42.3",
         "@types/express": "^5.0.0",
+        "@types/jsonwebtoken": "^9.0.7",
         "@types/uuid": "^10.0.0",
         "eslint": "^9.11.1",
         "nodemon": "^3.1.7",
