--- a/server/docker-compose.dev.yml
+++ b/server/docker-compose.dev.yml
@@ -6,6 +6,7 @@ services:
             dockerfile: dev.Dockerfile
         volumes:
             - ./:/usr/src/app
+            - /usr/src/app/node_modules
         ports:
             - 3003:3003
         environment:
