--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,9 @@
     "@mui/material": "^6.1.3",
     "@tanstack/react-query": "^5.59.13",
     "axios": "^1.7.7",
+    "js-cookie": "^3.0.5",
     "react": "^18.3.1",
+    "react-cookie": "^7.2.2",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
     "zod": "^3.23.8"
@@ -25,6 +27,7 @@
     "@eslint/js": "^9.9.0",
     "@types/node": "^22.7.5",
     "@types/react": "^18.3.3",
+    "@types/react-cookies": "^0.1.4",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.20",
