--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.3",
+    "@mui/joy": "^5.0.0-beta.48",
     "@mui/material": "^6.1.3",
     "@tanstack/react-query": "^5.59.13",
     "axios": "^1.7.7",
