--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
         "express": "^4.21.0",
         "express-async-errors": "^3.1.1",
         "jsonwebtoken": "^9.0.2",
+        "multer": "^1.4.5-lts.1",
         "pg": "^8.13.0",
         "sequelize": "^6.37.4",
         "socket.io": "^4.8.0",
@@ -34,6 +35,7 @@
         "@types/eslint__js": "^8.42.3",
         "@types/express": "^5.0.0",
         "@types/jsonwebtoken": "^9.0.7",
+        "@types/multer": "^1.4.12",
         "@types/uuid": "^10.0.0",
         "eslint": "^9.11.1",
         "nodemon": "^3.1.7",
