--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react": "^18.3.1",
     "react-cookie": "^7.2.2",
     "react-dom": "^18.3.1",
+    "react-easy-crop": "^5.1.0",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.27.0",
     "zod": "^3.23.8"
