--- a/server/docker-compose.dev.yml
+++ b/server/docker-compose.dev.yml
@@ -23,5 +23,14 @@ services:
         volumes:
             - ./postgres_data:/var/lib/postgresql/data
 
+    redis:
+        image: redis:latest
+        ports:
+            - 6379:6379
+        command: ['redis-server', '--appendonly', 'yes']
+        volumes:
+            - redis-data:/data
+
 volumes:
     postgres_data:
+    redis-data:
