--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
         "jsonwebtoken": "^9.0.2",
         "multer": "^1.4.5-lts.1",
         "pg": "^8.13.0",
+        "redis": "^4.7.0",
         "sequelize": "^6.37.4",
         "socket.io": "^4.8.0",
         "umzug": "^3.8.2",
